force-app/main/default/objects/CampaignMember/fields/Account_engagement_score__c.field-meta.xml
<CustomField>
    <fullName>Account_engagement_score__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Lead.Id)), 
    Lead.pi__score__c, 
    Contact.pi__score__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the score from Account Engagement (formerly Pardot)</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>