force-app/main/default/objects/CampaignMember/fields/Campaign_country__c.field-meta.xml
<CustomField>
    <fullName>Campaign_country__c</fullName>
    <formula>TEXT(Campaign.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign country</label>
    <type>Text</type>
</CustomField>