force-app/main/default/objects/CampaignMember/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>IF( ContactId != &quot;&quot;, Contact.Classification__c , if (LeadId != &quot;&quot;,   Lead.Classification__c , &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification</label>
    <type>Text</type>
</CustomField>