force-app/main/default/objects/CampaignMember/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Created custom field to replace standar Company field. which can&apos;t be sorted in the related list on Campaign</description>
    <formula>CompanyOrAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>