force-app/main/default/objects/CampaignMember/fields/Member_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Status_Change_Date__c</fullName>
    <label>Member Status Change Date</label>
    <type>Date</type>
</CustomField>