force-app/main/default/objects/CampaignMember/fields/NO_Member_status__c.field-meta.xml
<CustomField>
    <fullName>NO_Member_status__c</fullName>
    <description>A new restricted picklist for Campaign member status used by the norwegian marketing team. 
Set up as a standard for the event management system we are integrating in 2025.</description>
    <inlineHelpText>Status på personen knyttet til eventet.</inlineHelpText>
    <label>Member status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Internal registered</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Opted out</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>To be invited</fullName>
            </value>
            <value>
                <fullName>Unable to attend</fullName>
            </value>
            <value>
                <fullName>Unmailable</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>