force-app/main/default/objects/CampaignMember/fields/NO_Member_status_notes__c.field-meta.xml
<CustomField>
    <fullName>NO_Member_status_notes__c</fullName>
    <description>A new text field which allows Sales and Marketing to make notes on campaign members related to an event.</description>
    <inlineHelpText>Dette feltet kan brukes til å lage et &quot;notat&quot; på campaign member uten at det har innvirkning på member status.</inlineHelpText>
    <label>Member status notes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>