force-app/main/default/objects/CampaignMember/fields/Permission_status__c.field-meta.xml
<CustomField>
    <fullName>Permission_status__c</fullName>
    <formula>IF(
    NOT(ISBLANK(LeadId)),
    /* Check if Lead is associated */
    IF(
        Lead.Permission__c,
        &quot;True&quot;,
        &quot;False&quot;
    ),
    IF(
        NOT(ISBLANK(ContactId)),
        /* Check if Contact is associated */
        IF(
            Contact.Permission__c,
            &quot;True&quot;,
            &quot;False&quot;
        ),
        &quot;Blank&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permission status</label>
    <type>Text</type>
</CustomField>