force-app/main/default/objects/CampaignMember/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Fetches data from the &quot;Region__c)&quot; field on Lead or Contact</description>
    <formula>IF(
    ISPICKVAL(Lead.Region__c, &quot;&quot;), 
    TEXT(Contact.Region__c), 
    TEXT(Lead.Region__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>