force-app/main/default/objects/CampaignMember/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Pulls sector from campaign members account</description>
    <formula>TEXT(Contact.Account.Ownership)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>