force-app/main/default/objects/CampaignMember/fields/Statuses2__c.field-meta.xml
<CustomField>
    <fullName>Statuses2__c</fullName>
    <label>Statuses2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To be invited</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>