force-app/main/default/objects/CampaignMember/fields/Statuses__c.field-meta.xml
<CustomField>
    <fullName>Statuses__c</fullName>
    <label>Statuses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>