force-app/main/default/objects/CampaignMember/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>IF(
    NOT(ISBLANK(ContactId)), 
    Contact.Title, 
    Lead.Contact_Title_Link__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>